Mon Dec  3 10:18:39 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c src/dblib/unittests/.cvsignore:
	* src/dblib/unittests/Makefile.am src/dblib/unittests/setnull.c(added):
	- add a test for setnull

Sun Dec  2 17:58:40 EST 2007	JK Lowden <jklowden@freetds.org>
	* doc/api_status.txt
	* include/dblib.h include/sybdb.h include/tds.h
	* src/ctlib/blk.c src/dblib/bcp.c src/dblib/dblib.c
	- full implementation of dbsetnull().
	- Replaced _DB_GETCOLINFO macro with dbcolptr(). 

Sat Dec  1 14:05:54 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c src/dblib/unittests/null.c
	- correct TDS 5.0 bcp offset table calcuation in presence of NULLs.

Fri Nov 30 09:54:46 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c: missing new line

Thu Nov 29 09:03:32 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/null2.c: improve

Wed Nov 28 15:15:43 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac:
	- include windows.h under windows
	- include sql.h directly to avoid MingW problems
	* include/dblib.h src/dblib/bcp.c src/dblib/dblib.c src/dblib/rpc.c:
	- avoid core checking for parameters if argument are expected
	* src/dblib/unittests/null.c src/dblib/unittests/null2.c:
	- avoid invalid references to deallocated stack

Wed Nov 28 09:48:50 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c: remove warnings

Wed Nov 28 00:27:36 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/dblib/bcp.c fixed TDS 5.0 null-column bug, cf. ML
	* doc/tds.html Added BCP, made 4.01 strict, validated. 

Tue Nov 27 16:12:56 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/Makefile.am src/dblib/unittests/null2.c(added):
	- test dbbind/dbnullbind with NULLs
	* src/dblib/unittests/null.c: add note

Tue Nov 27 13:37:35 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/t0001.c src/dblib/unittests/t0022.c: