@@ -1,3 +1,6 @@
+Mon Dec  3 11:53:56 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/dblib/dblib.c: remove a warning
+
 Mon Dec  3 10:18:39 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/dblib.c src/dblib/unittests/.cvsignore:
 	* src/dblib/unittests/Makefile.am src/dblib/unittests/setnull.c(added):
